syntax = "proto3";

option go_package = "github.com/google/go-tpm-tools/proto";

// Enum values come from TCG Algorithm Registry - v1.27 - Table 3
enum ObjectType {
  OBJECT_INVALID = 0x0000;
  RSA = 0x0001;
  ECC = 0x0023;
}

enum HashAlgo {
  HASH_INVALID = 0x0000;
  SHA1 = 0x0004;
  SHA256 = 0x000B;
}

// SealedBytes stores the result of a TPM2_Seal. The private portion (priv) has
// already been encrypted and is no longer sensitive. The hash algorithm is
// assumed to be SHA256.
message SealedBytes {
  bytes priv = 1;
  bytes pub = 2;
  repeated int32 pcrs = 3;
  HashAlgo hash = 4;
  ObjectType srk = 5;
  Pcrs certified_pcrs = 6;
  bytes creation_data = 7;
  bytes ticket = 8;
}

message ImportBlob {
  bytes duplicate = 1;
  bytes encrypted_seed = 2;
  bytes public_area = 3;
  Pcrs pcrs = 4;
}

message Quote {
  // TPM2 quote, encoded as a TPMS_ATTEST
  bytes quote = 1;
  // TPM2 signature, encoded as a TPMT_SIGNATURE
  bytes raw_sig = 2;
  // PCR values of the bank being quoted
  Pcrs pcrs = 3;
}

message Pcrs {
  HashAlgo hash = 1;
  map<uint32, bytes> pcrs = 2;
}

// Information uniquely identifying a GCE instance. Can be used to create an
// instance URL, which can then be used with GCE APIs. Formatted like:
//   https://www.googleapis.com/compute/v1/projects/{project_id}/zones/{zone}/instances/{instance_name}
message GceInstanceInfo {
  string zone = 1;
  string project_id = 2;
  uint64 project_number = 3;
  string instance_name = 4;
  uint64 instance_id = 5;
}

message Attestation {
  // Attestation Key (AK) Public Area, encoded as a TPMT_PUBLIC
  bytes ak_pub = 1;
  // Quotes over all supported PCR banks
  repeated Quote quotes = 2;
  // TCG Event Log, encoded in the raw binary format
  bytes event_log = 3;
  // Optional information about a GCE instance, unused outside of GCE
  GceInstanceInfo instance_info = 4;
}

enum GceConfidentialTechnology {
  NONE = 0;
  AMD_SEV = 1;
  AMD_SEV_ES = 2;
}

message PlatformState {
  bytes firmware_version = 1;
  GceConfidentialTechnology technology = 2;
}

message Certificate {
  bytes der = 1;
}

// A Secure Boot database containing lists of hashes and certificates,
// as defined by section 32.4.1 Signature Database in the UEFI spec.
message Database {
  repeated Certificate certs = 1;
  repeated bytes hashes = 2;
}

message SecureBootState {
  bool enabled = 1; 
  Database db = 2;
  Database dbx = 3;
  // Authority events post-separator. Pre-separator authorities
  // are currently not supported.
  Database authority = 4;
}

message Event {
  uint32 index = 1;
  uint32 untrusted_type = 2;
  bytes data = 3;
  bytes digest = 4;
}

message MachineState {
  PlatformState platform = 1;
  SecureBootState secure_boot = 2;
  repeated Event raw_events = 3;
}

message PlatformPolicy {
  repeated bytes allowed_firmware_versions = 1;
  GceConfidentialTechnology minimum_technology = 2;
}

message SecureBootPolicy {
  Database permitted = 1;
  Database forbidden = 2;
  repeated Certificate permitted_authorities = 3;
}

message AttestationPolicy {
  PlatformPolicy platform = 1;
  SecureBootPolicy secure_boot = 2;
}
